Training now works.

--- a/note/msa_preprocessing.ipynb
+++ b/note/msa_preprocessing.ipynb
@@ -141,11 +141,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute Neff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|██▉       | 1072/3630 [07:27<14:40,  2.90it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "def hamming(x, y):\n",
+    "    return sum(c1 != c2 for c1, c2 in zip(x, y))\n",
+    "\n",
+    "hamming_mat = np.zeros([len(sequences), len(sequences)])\n",
+    "for i in tqdm(range(len(sequences))):\n",
+    "    for j in range(i+1, len(sequences)):\n",
+    "        hamming_mat[i, j] = hamming_mat[j, i] = hamming(sequences[i].seq, sequences[j].seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "329"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sequences[i].seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weights = 1 / (hamming_mat / 329 < 0.2).sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "476.0986121390859"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save filtered MSA annotated with sampling weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio.Seq import Seq\n",
+    "\n",
+    "sequences = [SeqIO.SeqRecord(Seq(s), id=id + f'@@@{w:.6f}', name=id + f'@@@{w:.6f}', description='') for s,id, w in zip(seqs, ids, weights)]\n",
+    "with open('../data/P53_HUMAN_b01.filtered.a2m', 'w') as outFile:\n",
+    "    SeqIO.write(sequences, handle=outFile, format='fasta')"
+   ]
   }
  ],
  "metadata": {
